<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/cityTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="43"
                android:textSize="125sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O"
                android:textSize="20sp"
                android:layout_gravity="top"
                android:layout_marginTop="40sp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cityName"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/cityCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cityCountry"
            android:textSize="20sp"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/cityLat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lat"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:layout_marginRight="10sp"/>
                    <TextView
                        android:id="@+id/cityLon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lon"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:layout_marginLeft="10sp"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/cityHumid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humid"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/cityPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/press"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/cityMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempmin"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/cityMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempmax"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/locationPopUpButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_add_circle_outline_black_24dp"/>

            <Button
                android:id="@+id/viewOnMapbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_map_black_24dp"/>
        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>